--- a/styles/character.module.scss
+++ b/styles/character.module.scss
@@ -9,8 +9,8 @@
   width: 300px;
   margin: 1rem;
   border-radius: 0.5rem;
-  background: hsla(255, 255, 255, 30%);
-  box-shadow: 0 0.5rem 1rem rgba(255, 255, 255, 30%);
+  background: rgb(17, 17, 17);
+  box-shadow: 0 0.5rem 1rem rgb(58, 58, 58);
   overflow: hidden;
   color: aliceblue;
   text-align: center;
