--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,8 +13,8 @@
   width: 300px;
   margin: 1rem;
   border-radius: 0.5rem;
-  background: hsla(255, 255, 255, 30%);
-  box-shadow: 0 0.5rem 1rem rgba(255, 255, 255, 30%);
+  background: rgb(22, 22, 22);
+  box-shadow: 0 0.5rem 1rem rgb(100, 100, 100);
   overflow: hidden;
   img {
     object-fit: cover;
